1.6.1.dev0
 * #402: Remove the error when "archive_name_format" is specified but a retention prefix isn't. 
 * #420: Warn when an unsupported variable is used in a hook command.
 * #528: Improve the error message when a configuration override contains an invalid value.
 * #531: BREAKING: When deep merging common configuration, merge colliding list values by appending
   them. Previously, one list replaced the other.
 * #532: When a configuration include is a relative path, load it from either the current working
   directory or from the directory containing the file doing the including. Previously, only the
   working directory was used.
 * Add a randomized delay to the sample systemd timer to spread out the load on a server.
 * Change the configuration format for borgmatic monitoring hooks (Healthchecks, Cronitor,
   PagerDuty, and Cronhub) to specify the ping URL / integration key as a named option. The intent
   is to support additional options in the future. This change is backwards-compatible.
 * Add emojis to documentation table of contents to make it easier to find particular how-to and
   reference guides at a glance.

1.6.0
 * #381: BREAKING: Greatly simplify configuration file reuse by deep merging when including common
   configuration. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/make-per-application-backups/#include-merging
 * #473: BREAKING: Instead of executing "before" command hooks before all borgmatic actions run (and
   "after" hooks after), execute these hooks right before/after the corresponding action. E.g.,
   "before_check" now runs immediately before the "check" action. This better supports running
   timing-sensitive tasks like pausing containers. Side effect: before/after command hooks now run
   once for each configured repository instead of once per configuration file. Additionally, the
   "repositories" interpolated variable has been changed to "repository", containing the path to the